--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -19,6 +19,8 @@
 }
 
 .landing-page .content {
+    justify-content: center;
+    align-items: center;
     text-align: center;
     color: white;
     z-index: 1; /* Ensures content appears above the overlay */
